src_old/objects/ServiceQuestionRule__c.object
<CustomObject>
    <description>Service Question Rules store this table</description>
    <fields>
        <fullName>DefinedResponseValueText__c</fullName>
        <formula>IF( ISBLANK( DefinedResponseValue__c ),  Value__c , DefinedResponseValue__r.DefinedResponseText__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defined Response Value Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefinedResponseValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defined Response Value</label>
        <referenceTo>ServiceQuestionDefinedResponse__c</referenceTo>
        <relationshipLabel>ServiceQuestionRules</relationshipLabel>
        <relationshipName>ServiceQuestionRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentServiceQuestionText__c</fullName>
        <formula>ParentServiceQuestion__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Service Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentServiceQuestionType__c</fullName>
        <formula>ParentServiceQuestion__r.QuestionType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Service Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentServiceQuestion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Service Question</label>
        <referenceTo>ServiceQuestion__c</referenceTo>
        <relationshipLabel>ServiceQuestionRules (Service Question)</relationshipLabel>
        <relationshipName>ParentServiceQuestion</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceQuestionText__c</fullName>
        <formula>ServiceQuestion__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceQuestion__c</fullName>
        <label>Service Question</label>
        <referenceTo>ServiceQuestion__c</referenceTo>
        <relationshipLabel>ServiceQuestionRules</relationshipLabel>
        <relationshipName>ServiceQuestionRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Service Question  Rule</label>
    <nameField>
        <displayFormat>QR-{00000000}</displayFormat>
        <label>SurveyQuestionruleName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceQuestionRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>